{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Play",
            "id": "293d99f3-0121-44ac-9767-de8e4b1ff3fe",
            "actions": [
                {
                    "name": "LightAtatck",
                    "type": "Button",
                    "id": "af44bd54-638b-4331-8647-69d6a108e183",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HeavyAttack",
                    "type": "Button",
                    "id": "e6806351-45e6-4f82-ad99-818d2b12d6c6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Sheathe/Unsheathe",
                    "type": "Button",
                    "id": "1659f43b-8b55-42ec-8be8-4b3085bf93be",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Whirlwind",
                    "type": "Button",
                    "id": "d42f01d8-adb3-4c47-ac3c-11da4aa2feed",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4252cbd6-929a-45ac-ac0e-56d680700331",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LightAtatck",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "377fdbbb-19f0-43dd-8154-3393831c0152",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LightAtatck",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dfd7346e-b7b1-4149-983e-351ff74c832f",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HeavyAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3c38d507-b1bc-43ee-9e47-cf5b2be3ce55",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HeavyAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "65eed4d9-3efa-43fe-9fcd-4f101edc6641",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sheathe/Unsheathe",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c703df55-b2e0-4d61-9eff-e16dddf1020f",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sheathe/Unsheathe",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "29202c8d-6eac-432f-bf80-caddc0a541bb",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Whirlwind",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "688a9747-97e7-4b11-b92a-a6e78eb828df",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Whirlwind",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}